dev/non_executable_reasons_record/181.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
uname
echo "ほげ"
------------------

[0;36m  File [0;32m"<ipython-input-1-37de45bc0266>"[0;36m, line [0;32m5[0m
[0;31m    echo "ほげ"[0m
[0m            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-37de45bc0266>, line 5)

Executability                            : False
